# libgravix2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.example  CONTRIBUTING.md  README.md  api.h.in  api_surface.txt  config.cmake  config.h.in  test_api_surface.sh
.github/workflows/: build_cmake.yml  build_doc.yml  build_docs.yml  coverage.yml  run_tests.yml  validate.yml
benchmark/: CMakeLists.txt  scrcl.c
bindings/python/: README.md  example.ipynb  setup.cfg
bindings/python/doc/source/: conf.py  gravix2.rst  index.rst  intro.rst
bindings/python/src/gravix2/: __init__.py  config.py  gravix2.py  helper.py  missile.py  planet.py
bindings/python/src/gravix2/extensions/: game.py  observation.py
bindings/python/test/: conftest.py  test_config.py  test_game.py  test_helpers.py  test_missile.py  test_planets.py  test_scrcl.py
cmake/: CompilerWarnings.cmake  Doxygen.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  dev-mode.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
doc/: .gitignore  Makefile  imgs.ipynb  main.md  theory.md
doc/img/: Makefile  notebook.ipynb  requirements.txt
doc/src/: fd.py  make_dfd_over_sin.py  make_f3D_ratio.py  make_fd.py  make_pot3D.py  make_vscrcl.py  mpl_config.py
docs/: annotated.html  annotated_dup.js  api_8h.html  api_8h.js  api_8h__dep__incl.map  api_8h__dep__incl.md5  api_8h__incl.map  api_8h__incl.md5  api_8h_source.html  classes.html  config_8c.html  config_8c.js  config_8c__incl.map  config_8c__incl.md5  dir_000002_000001.html  dir_250558fd2cbacd247a45c0a39807db85.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  group__API.html  group__API.js  group__API_ga0e30bc44a8315a2975d1cba7d9150413_cgraph.map  group__API_ga0e30bc44a8315a2975d1cba7d9150413_cgraph.md5  group__API_ga4a87ded171d2fe34cc3df4c5be121589_icgraph.map  group__API_ga4a87ded171d2fe34cc3df4c5be121589_icgraph.md5  group__API_gaa21fb62f1ec638cd0e0788305e433fa4_cgraph.map  group__API_gaa21fb62f1ec638cd0e0788305e433fa4_cgraph.md5  group__API_gacbb830adc79d054bb88292ce65851536_cgraph.map  group__API_gacbb830adc79d054bb88292ce65851536_cgraph.md5  group__API_gae3b14b78f8b2418d4b8fdab4ebde45c9_cgraph.map  (+89 more)
docs/py-bindings/: .buildinfo  genindex.html  gravix2.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/py-bindings/_sources/: intro.rst.txt
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  groups_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js
docsrc/: Makefile  imgs.ipynb  theory.md
docsrc/.ipynb_checkpoints/: imgs-checkpoint.ipynb
examples/: CMakeLists.txt  scrcl.c
include/: api.h  config.h.in  constants.h  helpers.h  integrators.h  linalg.h  planet.h  pot.h
include/libgravix2/: game.h  integrators.h  observations.h
src/: CMakeLists.txt  config.c  game.c  helpers.c  integrators.c  linalg.c  missile.c  observations.c  planet.c  pot.c  version.c
test/: CMakeLists.txt  check_asserts.c  helpers.hpp  helpers_tests.c  integrator_tests.c  integrators_tests.c  missile_tests.c  planet_tests.c  scrcl_tests.c  sym_tests.c  test_config.cpp  test_game.cpp  test_helpers.cpp  test_integrator.cpp  test_missile.cpp  test_planet.cpp  test_scrcl.cpp  test_torb.cpp  torb_tests.c
