[metadata]
name = pygravix2
version = 0.1
author = Nis Meinert
author_email = mail@nismeinert.de
description = Thin Python wrapper of the C-API of libgravix2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avitase/libgravix2/tree/main/bindings/python
project_urls =
	Documentation = https://avitase.github.io/libgravix2/py-bindings/
    Bug Tracker = https://github.com/avitase/libgravix2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
	numpy

[options.packages.find]
where = src
